--- a/resume.html
+++ b/resume.html
@@ -1,75 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mesup's Resume</title>
-</head>
-<body>
-    <table>
-        <tr>
-            <td><img style="float: left;" width="300" src="https://avatars.githubusercontent.com/u/72329116?v=4" alt="Mesup's Photo"></td>
-            <td>
-                <h1>Mesup Adhikari</h1>
-                <p><i>MLSA @Software Developer Community 🚀</i></p>
-                <p>I ❤️ Web Development and Here to guide the Coding Enthusiasts</p>
-            </td>
-        </tr>
-    </table>
-    <hr>
-    <!-- Header Ends -->
-    <h2>Education</h2>
-    <table border="">
-        <tr>
-            <th>Course</th>
-            <th>Institute</th>
-            <th>Year</th>
-            <th>Result</th>
-        </tr>
-        <tr>
-            <td>NEB 12<sup>th</sup>Class</td>
-            <td>Everest English Boarding Secondary School</td>
-            <td>2024</td>
-            <td>Result Waiting</td>
-        </tr>
-        <tr>
-            <td>SEE</td>
-            <td>Butwal Public School</td>
-            <td>2022</td>
-            <td>3.55</td>
-        </tr>
-    </table>
-    <h2>Experience</h2>
-    <p><i>Microsoft Learn Student Ambassador</i></p>
-    <ul>
-        <li>Developed content, resources, and support materials to facilitate the learning process for participants.</li>
-        <li>Fostered a collaborative learning environment where students could share their progress.</li>
-        <li>Collaborated with other Student Ambassadors to create an inclusive environment for all members.</li>
-        <li>Provided mentorship to peers to improve their coding, problem-solving, and other technical skills.</li>
-        <li>Actively participated in the MLC, contributing insights, and engaging in discussions.</li>
-    </ul>
-    <h2>Projects</h2>
-    <ul>
-        <li>
-            <h3>Landing Page For Startup</h3>
-            <ul>
-                <li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque provident odio quidem consequuntur et illo velit, vitae laborum nisi esse atque maiores dolorum ab. Dolores velit libero totam inventore cumque?</p></li>
-            </ul>
-                 
-        </li>
-        <li>
-            <h3>Software Devlopment For Startup</h3>
-            <ul>
-                <li>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque provident odio quidem consequuntur et illo velit, vitae laborum nisi esse atque maiores dolorum ab. Dolores velit libero totam inventore cumque?</p>
-                </li>
-            </ul>
-        </li>
-    </ul>
-    <hr>
-    <!-- Main Section Ends -->
-    <h2>Connect With Me</h2>
-    <p>Email: support@mesupadhikari.com.np</p>
-    <p>Github: https://github.com/mesupreneur</p>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Mesup's Resume</title>
+    </head>
+    <body>
+        <!-- <a href="https://www.google.com">Click Me</a> -->
+        <header>
+            <table>
+                <tr>
+                    <td>
+                        <a href="https://www.mesupadhikari.com.np"><img
+                                style="float: left;" width="300"
+                                src="https://avatars.githubusercontent.com/u/72329116?v=4"
+                                alt="Mesup's Photo"></a>
+                    </td>
+                    <td>
+                        <h1>Mesup Adhikari</h1>
+                        <p><i>MLSA <a target="_blank"
+                                    href="https://microsoft.com">@Software
+                                    Developer Community</a> 🚀</i></p>
+                        <p>I ❤️ Web Development and Here to guide the Coding
+                            Enthusiasts</p>
+                        <nav>
+                            <ul>
+                                <li><a href="#education">Education</a></li>
+                                <li><a href="#experience">Experience</a></li>
+                                <li><a href="#projects">Projects</a></li>
+                                <li><a href="#contactme">Contact Me</a></li>
+                            </ul>
+                        </nav>
+                    </td>
+                </tr>
+            </table>
+            <hr>
+        </header>
+        <!-- Header Ends -->
+        <main>
+            <section id="education">
+                <h2>Education</h2>
+                <table border>
+                    <tr>
+                        <th>Course</th>
+                        <th>Institute</th>
+                        <th>Year</th>
+                        <th>Result</th>
+                    </tr>
+                    <tr>
+                        <td>NEB 12<sup>th</sup>Class</td>
+                        <td>Everest English Boarding Secondary School</td>
+                        <td>2024</td>
+                        <td>Result Waiting</td>
+                    </tr>
+                    <tr>
+                        <td>SEE</td>
+                        <td>Butwal Public School</td>
+                        <td>2022</td>
+                        <td>3.55</td>
+                    </tr>
+                </table>
+            </section>
+            <section id="experience">
+                <h2>Experience</h2>
+                <article>
+                <p><i>Microsoft Learn Student Ambassador</i></p>
+                <ul>
+                    <li>Developed content, resources, and support materials to
+                        facilitate the learning process for participants.</li>
+                    <li>Fostered a collaborative learning environment where
+                        students
+                        could share their progress.</li>
+                    <li>Collaborated with other Student Ambassadors to create an
+                        inclusive environment for all members.</li>
+                    <li>Provided mentorship to peers to improve their coding,
+                        problem-solving, and other technical skills.</li>
+                    <li>Actively participated in the MLC, contributing insights,
+                        and
+                        engaging in discussions.</li>
+                </ul>
+                </article>
+            </section>
+            <section id="projects">
+                <h2>Projects</h2>
+                <ul>
+                    <li>
+                        <article>
+                        <h3>Landing Page For Startup</h3>
+                        <ul>
+                            <li><p>Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit. Doloremque provident odio
+                                    quidem consequuntur et illo velit, vitae
+                                    laborum
+                                    nisi esse atque maiores dolorum ab. Dolores
+                                    velit libero totam inventore
+                                    cumque?</p></li>
+                        </ul>
+                    </article>
+
+                    </li>
+                    <li>
+                        <article>
+                        <h3>Software Devlopment For Startup</h3>
+                        <ul>
+                            <li>
+                                <p>Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit. Doloremque provident odio
+                                    quidem consequuntur et illo velit, vitae
+                                    laborum
+                                    nisi esse atque maiores dolorum ab. Dolores
+                                    velit libero totam inventore cumque?</p>
+                            </li>
+                        </article>
+                        </ul>
+                    </li>
+                </ul>
+                <hr>
+            </section>
+        </main>
+        <aside>
+
+        </aside>
+        <!-- Main Section Ends -->
+        <footer id="contactme">
+            <h2 id="contact">Connect With Me</h2>
+            <p>Email: <a
+                    href="mailto:support@mesupadhikari.com.np">support@mesupadhikari.com.np</a></p>
+            <p>Github: https://github.com/mesupreneur</p>
+            <a href="tel:+9779800000000"><p>9800000000</p></a>
+            <a href="about.html"><p>About Us</p></a>
+            <a href="#">Back To Top</a>
+        </footer>
+    </body>
 </html>
